[project]
name = "gourmand"
version = "1.1.0"
authors = [{name = "Gourmand Team and Contributors"},] # This might give an error
maintainers = [
        {name = "Cyril Danilevski", email = "gourmand@cyril.wtf"},
        {name = "FriedrichFröbel"},
]
description = "Recipe Organizer and Shopping List Generator"
keywords = ["gourmand", "recipe", "baking", "cooking", "kitchen"]
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
#requires-python = ">=3.0"
dependencies = [
        "beautifulsoup4>=4.10.0",
        'importlib-metadata; python_version<"3.10"',
        "lxml>=4.6.3",
        "pillow>=8.3.2",
        "pygobject>=3.40.1,<=3.50.0",  # Issues with Ubuntu 22.04: https://github.com/beeware/toga/issues/3143
        "sqlalchemy>=1.4.36,<2",
        "tomli-w>=1.0.0",
        'toml==0.10.2; python_version<"3.11"',
        "recipe-scrapers>=14.27.0,<15",
        "setuptools<81",
]

[project.urls]
Repository = "https://github.com/GourmandRecipeManager/gourmand.git"
Changelog = "https://github.com/GourmandRecipeManager/gourmand/blob/main/ChangeLog"
Issues = "https://github.com/GourmandRecipeManager/gourmand/issues"

[project.optional-dependencies]
epub-export = ["ebooklib==0.17.1"]
pdf-export = ["reportlab<4"]
spellcheck = [
        "pyenchant",
        "pygtkspellcheck",
]

[project.gui-scripts]
gourmand = "gourmand.main:launch_app"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
data = ["*.xml", "*.desktop", "*.svg"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "tests",
]

[tool.black]
line-length = 160
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#t-target-version
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 160
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",  # All pycodestyle errors
    "W",  # pycodestyle warnings
    "PGH004",  # blanket-noqa
    "I",  # isort
    # "N",  # pep8-naming   # TODO: 338 violations in main API as of 2024-12-30.
    # "A",  # flake8-builtins  # TODO: 112 violations in main API as of 2024-12-30.
    # "B",  # flake8-bugbear  # TODO: 122 violations in main API as of 2024-12-30.
]
